[gd_scene load_steps=3 format=2]

[ext_resource path="res://ControlScenes/BackgroundScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://ControlScenes/JoinScreen.gd" type="Script" id=2]

[node name="JoinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Button" type="Button" parent="."]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01
margin_right = 54.0
margin_bottom = 20.0
text = "< Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.02
anchor_top = 0.1
anchor_right = 0.98
anchor_bottom = 0.97
grow_horizontal = 2
grow_vertical = 2

[node name="JoinDetails" type="VBoxContainer" parent="Control"]
anchor_bottom = 1.0
margin_right = 144.0
margin_bottom = 0.399994
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="VBoxContainer" parent="Control/JoinDetails"]
margin_top = 18.0
margin_right = 144.0
margin_bottom = 56.0
custom_constants/separation = 0

[node name="IPLabel" type="Label" parent="Control/JoinDetails/IP"]
margin_right = 144.0
margin_bottom = 14.0
hint_tooltip = "This is the ip of the game
that you want to join."
mouse_filter = 1
text = "Server IP:"

[node name="IPInput" type="LineEdit" parent="Control/JoinDetails/IP"]
margin_top = 14.0
margin_right = 144.0
margin_bottom = 38.0

[node name="Username" type="VBoxContainer" parent="Control/JoinDetails"]
margin_top = 68.0
margin_right = 144.0
margin_bottom = 106.0
custom_constants/separation = 0

[node name="UsernameLabel" type="Label" parent="Control/JoinDetails/Username"]
margin_right = 144.0
margin_bottom = 14.0
text = "Your username:"

[node name="UsernameInput" type="LineEdit" parent="Control/JoinDetails/Username"]
margin_top = 14.0
margin_right = 144.0
margin_bottom = 38.0

[node name="JoinControlButton" type="Button" parent="Control/JoinDetails"]
margin_top = 118.0
margin_right = 144.0
margin_bottom = 138.0
text = "Join Server"

[node name="ServerDetails" type="VBoxContainer" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -135.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 140, 0 )
custom_constants/separation = 11
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="Control/ServerDetails"]
margin_top = 8.0
margin_right = 140.0
margin_bottom = 22.0
text = "Status: Pending . . . "

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ServerDetails"]
margin_top = 33.0
margin_right = 140.0
margin_bottom = 147.0
custom_constants/separation = 0

[node name="PlayersLabel" type="Label" parent="Control/ServerDetails/VBoxContainer"]
margin_right = 140.0
margin_bottom = 14.0
text = "Players:"

[node name="PlayerList" type="ItemList" parent="Control/ServerDetails/VBoxContainer"]
margin_top = 14.0
margin_right = 140.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 100 )

[node name="LoadingTimer" type="Timer" parent="Control/ServerDetails"]
wait_time = 0.75
autostart = true

[node name="UsernameAlert" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -29.0
margin_right = 103.5
margin_bottom = 29.0
window_title = "Missing Username"

[node name="ErrorDescription" type="Label" parent="UsernameAlert"]
margin_left = 8.0
margin_top = 8.0
margin_right = 199.0
margin_bottom = 22.0
text = "You must provide a username"

[node name="IPAlert" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -29.0
margin_right = 104.0
margin_bottom = 47.0
window_title = "Missing IP Address"

[node name="ErrorDescription" type="Label" parent="IPAlert"]
margin_left = 8.0
margin_top = 8.0
margin_right = 199.0
margin_bottom = 40.0
text = "You must provide an IP Address"
autowrap = true
max_lines_visible = 2

[node name="ErrorAlert" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = -29.0
margin_right = 140.5
margin_bottom = 29.0
window_title = "Error!"

[node name="ErrorDescription" type="Label" parent="ErrorAlert"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = -21.0
margin_right = 132.5
margin_bottom = -7.0
text = "This is just a test description and not real"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/JoinDetails/JoinControlButton" to="." method="_on_JoinControlButton_pressed"]
[connection signal="timeout" from="Control/ServerDetails/LoadingTimer" to="." method="_on_LoadingTimer_timeout"]
